force-app/main/default/objects/KimbleOne__AllowanceSchemeRateCard__c/KimbleOne__AllowanceSchemeRateCard__c.object-meta.xml
<CustomObject>
    <label>Allowance Scheme Rate Card</label>
    <nameField>
        <label>Allowance Scheme Rate Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allowance Scheme Rate Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>