force-app/main/default/objects/KimbleOne__AllowanceSchemeRateCard__c/fields/KimbleOne__AllowanceType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowanceType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Allowance Type</label>
    <referenceTo>KimbleOne__AllowanceType__c</referenceTo>
    <relationshipLabel>Allowance Scheme Rate Cards</relationshipLabel>
    <relationshipName>AllowanceSchemeRateCards</relationshipName>
    <type>Lookup</type>
</CustomField>