force-app/main/default/objects/KimbleOne__AllowanceSchemeRateCard__c/fields/KimbleOne__EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EffectiveDate__c</fullName>
    <label>Effective From Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>