force-app/main/default/objects/KimbleOne__AllowanceSchemeRateCard__c/fields/KimbleOne__EffectiveToDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EffectiveToDate__c</fullName>
    <label>Effective To Date</label>
    <type>Date</type>
</CustomField>