force-app/main/default/objects/KimbleOne__AllowanceSchemeRateCard__c/fields/KimbleOne__IsAdjustment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsAdjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Adjustment</label>
    <type>Checkbox</type>
</CustomField>