force-app/main/default/objects/KimbleOne__AllowanceSchemeRateCard__c/fields/KimbleOne__IsAllowance__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsAllowance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Allowance</label>
    <type>Checkbox</type>
</CustomField>