force-app/main/default/objects/KimbleOne__AllowanceSchemeRateCard__c/fields/KimbleOne__IsScale__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsScale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Scale</label>
    <type>Checkbox</type>
</CustomField>